--- a/checkout_asp.net_mvc/Views/Shared/_Layout.cshtml
+++ b/checkout_asp.net_mvc/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout ASP .NET MVC</title>
+  <link href="~/Content/style.css" rel="stylesheet" />
 </head>
 <body>
   @RenderBody()
